[tool.poetry]
name = "repl_python3_o2"
version = "0.1.0"
description = ""
authors = ["Hippoey <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
python-dotenv = "^0.19.0"
discord = "^1.7.3"
Flask = "^2.0.1"
praw = "^7.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
